// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GqlCSS it renders component with styles 1`] = `
<div>
  <div
    class="x0 x1 x2 x3"
  >
    Using component with styles
  </div>
</div>
`;

exports[`GqlCSS it renders component without styles 1`] = `
<div>
  <div
    class=""
  >
    Using component without styles
  </div>
</div>
`;
